# vi-clean-text-normalizer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  PROJECT.md  README.md  ROADMAP.md  pyproject.toml  run_eval.py
.agents/skills/vi-clean-text-normalizer/: SKILL.md
.agents/skills/vi-clean-text-normalizer/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: feature-development.md  feature-module-development.md  refactoring.md
.claude/homunculus/instincts/inherited/: vi-clean-text-normalizer-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: ci.yml  publish.yml
.opencode/plans/: fix-candidate-pruning-and-edit-distance.md
data/evaluation/: gold.small.jsonl
data/lexicon/: trusted_lexicon.db  trusted_words.vi.jsonl
data/processed/: ngram_store.vi.json
data/raw/: aspell_vi.dic  boy.txt  girl.txt  hongocduc.txt  tudientv.txt  underthesea_merged.txt  uvd1.txt  viet74k.txt  wiktionary.txt
docs/superpowers/plans/: 2026-05-07-m5-ngram-scorer.md  2026-05-08-phrase-span-lattice-decoder.md
docs/superpowers/specs/: 2026-05-07-m5-ngram-scorer-design.md  2026-05-08-phrase-span-lattice-decoder-design.md
resources/lexicons/: abbreviations.vi.json  chemicals.txt  ocr_confusions.vi.json  phrases.vi.json  syllables.vi.json
resources/matchers/: chemical.yaml  code.yaml  date.yaml  email.yaml  money.yaml  number.yaml  percent.yaml  phone.yaml  unit.yaml  url.yaml
resources/ngrams/: ngram_store.vi.json
resources/phrases/: negative_phrases.vi.json  phrases.vi.json
resources/phrases/domains/: product_instruction.vi.json
scripts/: __init__.py  bench_stage4_candidates.py  build_lexicon_db.py  build_ngram_store.py  build_trusted_lexicon.py  build_trusted_lexicon_db.py  build_trusted_words_vi.py  download_lexicon_sources.py  evaluate.py
src/vn_corrector/: __init__.py  case_mask.py  cli.py  normalizer.py  protected_tokens.py  tokenizer.py
src/vn_corrector/common/: __init__.py  constants.py  contracts.py  correction.py  enums.py  errors.py  lexicon.py  scoring.py  spans.py  types.py  validation.py
src/vn_corrector/evaluation/: dataset.py  metrics.py  report.py  runner.py  types.py
src/vn_corrector/lexicon/: __init__.py  accent_stripper.py  backends.py  interface.py  store.py  types.py
src/vn_corrector/pipeline/: __init__.py  config.py  context.py  corrector.py  diagnostics.py  errors.py  reconstruction.py
src/vn_corrector/resources/lexicons/: foreign_words.json  ocr_confusions.vi.json  syllables.vi.json  units.vi.json  words.vi.json
src/vn_corrector/stage1_normalize/: __init__.py  char_normalizer.py  config.py  engine.py  types.py
src/vn_corrector/stage1_normalize/steps/: __init__.py  invisible.py  unicode.py  whitespace.py
src/vn_corrector/stage2_lexicon/: __init__.py
src/vn_corrector/stage2_lexicon/backends/: __init__.py  data_store.py  hybrid_store.py  json_store.py  sqlite_store.py
src/vn_corrector/stage2_lexicon/builders/: __init__.py  abbreviations.py  base.py  confusion.py  phrases.py  syllables.py  words.py
src/vn_corrector/stage2_lexicon/core/: __init__.py  accent_stripper.py  normalize.py  store.py  types.py
src/vn_corrector/stage2_lexicon/pipeline/: __init__.py  build_pipeline.py
src/vn_corrector/stage3_protect/: __init__.py  engine.py  registry.py
src/vn_corrector/stage3_protect/matchers/: __init__.py  base.py  lexicon.py  regex.py
src/vn_corrector/stage4_candidates/: __init__.py  cache.py  config.py  diagnostics.py  generator.py  limits.py  phrase_span.py  ranking.py  types.py  word_island.py
src/vn_corrector/stage4_candidates/sources/: __init__.py  abbreviation.py  base.py  domain_specific.py  edit_distance.py  ocr_confusion.py  original.py  phrase_evidence.py  syllable_map.py  word_lexicon.py
src/vn_corrector/stage5_scorer/: __init__.py  combinations.py  config.py  diagnostics.py  explain.py  lattice.py  ngram_store.py  scorer.py  types.py  weights.py  windowing.py
src/vn_corrector/stage5_scorer/backends/: __init__.py  json_ngram_store.py
src/vn_corrector/stage6_decision/: __init__.py  changes.py  config.py  decision.py  flags.py  pipeline.py  types.py
src/vn_corrector/stage7_evaluation/: dataset.py  report.py  runner.py
src/vn_corrector/utils/: __init__.py  unicode.py
tests/: test_accent_stripper.py  test_case_mask.py  test_common.py  test_lexicon_builders.py  test_lexicon_index.py  test_lexicon_pipeline.py  test_lexicon_store.py  test_lexicon_validation.py  test_normalize_key.py  test_normalizer.py  test_protected_tokens.py  test_real_world_ocr_markdown_integration.py  test_stage2_lexicon_store.py  test_tokenizer.py  test_trusted_lexicon.py
tests/evaluation/: test_dataset.py  test_metrics.py  test_regression_small.py  test_runner.py
tests/fixtures/ocr/: chandra_milk_instructions.md  chandra_product_marketing.md
tests/fixtures/stage4_candidates/: golden_cases.yaml
tests/integration/: test_cli_pipeline.py
tests/pipeline/: test_corrector.py  test_reconstruction.py
tests/stage4_candidates/: test_cache.py  test_diagnostics.py  test_edit_distance_source.py  test_generator_contract.py  test_golden.py  test_limits.py  test_phrase_evidence.py  test_phrase_span.py  test_protected_tokens.py  test_ranking.py  test_real_lexicon.py  test_word_island.py
tests/stage5_scorer/: conftest.py  test_acceptance.py  test_build_ngram_store.py  test_combinations.py  test_explain.py  test_lattice.py  test_ngram_store.py  test_scorer.py  test_types.py  test_windowing.py
tests/stage6_decision/: test_changes.py  test_decision_engine.py  test_flags.py  test_pipeline.py
tests/stage7_evaluation/: test_dataset.py  test_metrics.py  test_regression_small.py  test_runner.py
