[project]
name = "vi-clean-text-normalizer"
version = "0.1.0"
description = "Vietnamese OCR post-correction engine — conservative, explainable, and safe"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dev Workstation"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pylint>=4",
    "black>=25",
]

[project.urls]
Homepage = "https://github.com/dev-workstation/vi-clean-text-normalizer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vn_corrector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint]
py-version = "3.12"
recursive = true
good-names = ""
disable = [
    "missing-docstring",
    "too-few-public-methods",
]

[tool.pylint.similarities]
ignore-signatures = true
ignore-comments = true
ignore-docstrings = true
min-similarity-lines = 6
ignore-imports = true

[tool.black]
line-length = 100
target-version = ["py312"]
skip-magic-trailing-comma = true
