[project]
name = "vi-clean-text-normalizer"
version = "0.1.0"
description = "Vietnamese OCR post-correction engine — conservative, explainable, and safe"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Dev Workstation"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest-cov>=6",
    "pre-commit>=4",
    "types-PyYAML>=6",
]

[project.scripts]
corrector = "vn_corrector.cli:main"

[project.urls]
Homepage = "https://github.com/Vi-Lang-Foundation/vi-clean-text-normalizer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vn_corrector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=vn_corrector --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "RUF",  # ruff-specific rules
]
ignore = [
    "D",    # pydocstyle (matches current missing-docstring disable)
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ARG001",  # unused function argument (common in pytest fixtures)
    "RUF001",  # ambiguous char detection (intentional: testing non-standard spaces)
]

[tool.mypy]
python_version = "3.12"
strict = true
allow_untyped_decorators = true
warn_unused_ignores = true
exclude = ["scripts/build_lexicon_db.py", "scripts/build_trusted_lexicon.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

